Fix syntax error.

--- a/InstallGTM.html
+++ b/InstallGTM.html
@@ -14,7 +14,7 @@
 <p>The instructions are taken from the <a href="https://sourceforge.net/projects/fis-gtm/files/GT.M%20Acculturation%20Workshop/">GT.M Acculturation Workshop</a>. They have been only slightly modified.</p>
 <h1 id="using-the-package-manager">Using the Package Manager</h1>
 <p>If you are using Ubuntu Linux 14.04 LTS or later; or Debian Jessie, Testing, or Unstable; or other Linux distributions that may already have GT.M packages accessed using their normal package managers, you may be able to install GT.M using the package manager, e.g., apt-get install fis-gtm. However, as this workshop is intended to teach GT.M Administration and Operations, we will not use this approach here.</p>
-<p>Using the Installation Script ----------------</p>
+<h1 id="using-the-installation-script">Using the Installation Script</h1>
 <p>The installation script, gminstall, is downloads and installs the current GT.M release. From <a href="http://sourceforge.net/projects/fis-gtm/files/GT.M%20Installer">http://sourceforge.net/projects/fis-gtm/files/GT.M%20Installer</a>, download the latest version of the GT.M installer (currently version 0.13) into a temporary directory, either using a browser, or a program such as wget, and execute it.</p>
 <p>Depending on your network configuration the wget command may need environment variables to be set to go through proxy servers, and the sudo command may require the -E option to pass your shell environment to root process invoked by the sudo.</p>
 <pre class="code">
