--- a/InstallGTM.html
+++ b/InstallGTM.html
@@ -17,7 +17,7 @@
 <h1 id="using-the-installation-script">Using the Installation Script</h1>
 <p>The installation script, gminstall, is downloads and installs the current GT.M release. From <a href="http://sourceforge.net/projects/fis-gtm/files/GT.M%20Installer">http://sourceforge.net/projects/fis-gtm/files/GT.M%20Installer</a>, download the latest version of the GT.M installer (currently version 0.13) into a temporary directory, either using a browser, or a program such as wget, and execute it.</p>
 <p>Depending on your network configuration the wget command may need environment variables to be set to go through proxy servers, and the sudo command may require the -E option to pass your shell environment to root process invoked by the sudo.</p>
-<pre class="code">
+<code>
 $ <strong>mkdir /tmp/tmp</strong>
 $ <strong>cd /tmp/tmp</strong>
 /tmp/tmp$ <strong>wget http://sourceforge.net/projects/fis-gtm/files/GT.M%20Installer/v0.13/gtminstall</strong>
@@ -32,21 +32,21 @@ total 12
 dr-xr-xr-x 5 root root 8192 Nov 13 10:57 V6.2-000_x86_64
 /tmp/tmp$ <strong>cd</strong>
 $
-</pre>
+</code>
 <h1 id="traditional-technique">Traditional Technique</h1>
 <p>First download GT.M for 64-bit GNU/Linux on the x86_64 platform from Source Forge. These instructions are based on V6.2-000; you can use it or any more recent GT.M release. Download it to a temporary directory, e.g., /tmp, with the wget program:</p>
-<pre class="code">
+<code>
 $ <strong>wget -P /tmp http://sourceforge.net/projects/fis-gtm/files/GT.M-amd64-Linux/V6.2-000/gtm_V62000_linux_x8664_pro.tar.gz</strong>
-</pre>
+</code>
 <p>Then create a temporary directory and unpack the contents of the tarball into it. If you installed GT.M using the gtminstall technique, you should already have a /tmp/tmp directory.</p>
-<pre class="code">
+<code>
 $ <strong>mkdir /tmp/tmp</strong>
 $ <strong>cd /tmp/tmp</strong>
 /tmp/tmp$ <strong>tar zxf ../gtm_V62000_linux_x8664_pro.tar.gz</strong>
 /tmp/tmp$
-</pre> 
+</code> 
 <p>Then install GT.M in /usr/local/lib/fis-gtm/V6.2-000_x86_64 – since the gtminstall script would have already installed a GT.M in /usr/lib/fis-gtm/V6.2-000_x86_64. Note that this must be done as root.</p>
-<pre class="code">
+<code>
 /tmp/tmp$ <strong>sudo ./configure</strong>
 [sudo] password for gtmuser: 
 
@@ -96,7 +96,7 @@ Installation completed. Would you like all the temporary files
 removed from this directory? (y or n) <strong>y</strong>
 /tmp/tmp$ cd
 /tmp/tmp$
-</pre>
+</code>
 <p>GT.M is now installed and operational.</p>
 </body>
 </html>
