--- a/InitializeVistA.html
+++ b/InitializeVistA.html
@@ -369,10 +369,60 @@ Select Taskman Management <TEST ACCOUNT> Option: <strong>&lt;enter&gt;</strong>
 
 Select Systems Manager Menu <TEST ACCOUNT> Option: <strong>&lt;enter&gt;</strong></code>
 <h2 id="on-gt.m-1">On GT.M</h2>
-<p>The process is a bit more complicated, but OSEHRA has a <a href="http://wiki.osehra.org/pages/viewpage.action?pageId=3047628#Developmentenvironmentinstall%28OSEHRAVM%29-Configurexinetd">wiki page</a> which describes the process of the set up.</p>
+<p>TODO Replace use of xinetd with Sam's native solution!!!</p>
 <h1 id="start-taskman">Start TaskMan</h1>
 <p>The Task Manager is an integral part of a running VistA instance. It lets actions and users schedule tasks to be performed at certain times or after certain trigger events. The XWB Listener Starter example is one example of scheduling a task.</p>
 <p>The OSEHRA script uses the <code>TaskMan Management Utilities</code> menu to control TaskMan:</p>
+<code>VISTA> <strong>S DUZ=1 D ^XUP</strong>
+
+Setting up programmer environment
+This is a TEST account.
+
+Terminal Type set to: C-VT220
+
+Select OPTION NAME: <strong>TASKMAN MANAGEMENT UTILITIES</strong>  XUTM UTIL     Taskman Manageme
+nt Utilities
+
+
+ MTM    Monitor Taskman
+        Check Taskman's Environment
+        Edit Taskman Parameters ...
+        Restart Task Manager
+        Place Taskman in a WAIT State
+        Remove Taskman from WAIT State
+        Stop Task Manager
+        Taskman Error Log ...
+        Clean Task File
+        Problem Device Clear
+        Problem Device report.
+        SYNC flag file control
+
+
+You've got PRIORITY mail!
+
+
+Select Taskman Management Utilities <TEST ACCOUNT> Option: <strong>Restart Task Manager</strong>
+ARE YOU SURE YOU WANT TO RESTART TASKMAN? NO// <strong>Y</strong>  (YES)
+Restarting...TaskMan restarted!
+
+
+ MTM    Monitor Taskman
+        Check Taskman's Environment
+        Edit Taskman Parameters ...
+        Restart Task Manager
+        Place Taskman in a WAIT State
+        Remove Taskman from WAIT State
+        Stop Task Manager
+        Taskman Error Log ...
+        Clean Task File<F5>
+        Problem Device Clear
+        Problem Device report.
+        SYNC flag file control
+
+
+You've got PRIORITY mail!
+
+Select Taskman Management Utilities <TEST ACCOUNT> Option: <strong>^</strong></code>
 <h1 id="add-user">Add User</h1>
 <p>The next step is to create a user that can sign on to the CPRS GUI. The things to make sure that this new user has are</p>
 <blockquote>
@@ -387,92 +437,135 @@ Select Systems Manager Menu <TEST ACCOUNT> Option: <strong>&lt;enter&gt;</strong
 <p>The menu option ensures that the user has the proper permissions to access CPRS after signing in with their ACCESS and VERIFY codes. The Tab access can limit the amount of things a user can access once they have signed in.</p>
 <p>The adding of the user is done through the User Management menu in the menu system, which will ask for information in a series of prompts then will open a Screenman form to complete the task.</p>
 <p>The following steps will add a generic <code>CPRS,USER</code> person who will be able to sign into CPRS.</p>
-<blockquote>
-<p>VISTA&gt; S DUZ=1 D ^XUP</p>
-<p>Setting up programmer environment This is a TEST account.</p>
-<p>Terminal Type set to: C-VT220</p>
-<p>Select OPTION NAME: Systems Manager Menu</p>
-<blockquote>
-<p>Core Applications ... Device Management ... Menu Management ... Programmer Options ... Operations Management ... Spool Management ... Information Security Officer Menu ... Taskman Management ... User Management ... Application Utilities ... Capacity Planning ... HL7 Main Menu ...</p>
-</blockquote>
-<dl>
-<dt>You have PENDING ALERTS</dt>
-<dd><p>Enter &quot;VA to jump to VIEW ALERTS option</p>
-</dd>
-</dl>
-<p>Select Systems Manager Menu &lt;TEST ACCOUNT&gt; Option: User Management</p>
-<blockquote>
-<p>Add a New User to the System Grant Access by Profile Edit an Existing User Deactivate a User Reactivate a User List users User Inquiry Switch Identities File Access Security ... **&gt; Out of order: ACCESS DISABLED Clear Electronic signature code Electronic Signature Block Edit List Inactive Person Class Users Manage User File ... OAA Trainee Registration Menu ... Person Class Edit Reprint Access agreement letter</p>
-</blockquote>
-<dl>
-<dt>You have PENDING ALERTS</dt>
-<dd><p>Enter &quot;VA to jump to VIEW ALERTS option</p>
-</dd>
-</dl>
-<p>Select User Management &lt;TEST ACCOUNT&gt; Option: Add a New User to the System Enter NEW PERSON's name (Family,Given Middle Suffix): CPRS,USER Are you adding 'CPRS,USER' as a new NEW PERSON (the 56TH)? No// Y (Yes) Checking SOUNDEX for matches. No matches found. Now for the Identifiers. INITIAL: UC SSN: 000000002 SEX: M MALE NPI:</p>
-</blockquote>
+<code>VISTA> <strong>S DUZ=1 D ^XUP</strong>
+
+Setting up programmer environment
+This is a TEST account.
+
+Terminal Type set to: C-VT220
+
+Select OPTION NAME:  <strong>Systems Manager Menu</strong>
+
+
+        Core Applications ...
+        Device Management ...
+        Menu Management ...
+        Programmer Options ...
+        Operations Management ...
+        Spool Management ...
+        Information Security Officer Menu ...
+        Taskman Management ...
+        User Management ...
+        Application Utilities ...
+        Capacity Planning ...
+        HL7 Main Menu ...
+
+
+You have PENDING ALERTS
+        Enter  "VA to jump to VIEW ALERTS option
+
+Select Systems Manager Menu <TEST ACCOUNT> Option: <strong>User Management</strong>
+
+
+        Add a New User to the System
+        Grant Access by Profile
+        Edit an Existing User
+        Deactivate a User
+        Reactivate a User
+        List users
+        User Inquiry
+        Switch Identities
+        File Access Security ...
+           \**> Out of order:  ACCESS DISABLED
+        Clear Electronic signature code
+        Electronic Signature Block Edit
+        List Inactive Person Class Users
+        Manage User File ...
+        OAA Trainee Registration Menu ...
+        Person Class Edit
+        Reprint Access agreement letter
+
+
+You have PENDING ALERTS
+        Enter  "VA to jump to VIEW ALERTS option
+
+Select User Management <TEST ACCOUNT> Option: <strong>Add a New User to the System</strong>
+Enter NEW PERSON's name (Family,Given Middle Suffix): <strong>CPRS,USER</strong>
+  Are you adding 'CPRS,USER' as a new NEW PERSON (the 56TH)? No// <strong>Y</strong>  (Yes)
+Checking SOUNDEX for matches.
+No matches found.
+Now for the Identifiers.
+INITIAL: <strong>UC</strong>
+SSN: <strong>000000002</strong>
+SEX: <strong>M</strong>  MALE
+NPI: <strong>&lt;enter&gt;</strong></code>
 <p>Once in the ScreenMan form, you will need to set the necessary information mentioned above. Four pieces of information are able to be set on the first page of the ScreenMan form. The arrows are for emphasis to highlight where information needs to be entered and will not show up in the terminal window.</p>
 <p>To add an access or verify codes, you need to first answer <code>Y</code> to the <code>Want to edit ...</code> questions, it will then prompt you to change the codes.</p>
-<blockquote>
-<h4 id="name-cprsuser-page-1-of-5">NAME: CPRS,USER Page 1 of 5</h4>
-<blockquote>
-<dl>
-<dt>NAME... CPRS,USER INITIAL: UC</dt>
-<dd><dl>
-<dt>TITLE: NICK NAME:</dt>
-<dd><p>SSN: 000000002 DOB:</p>
-</dd>
-</dl>
-</dd>
-</dl>
-<p>DEGREE: MAIL CODE:</p>
-</blockquote>
-<blockquote>
-<p>DISUSER: TERMINATION DATE: Termination Reason:</p>
-<blockquote>
-<p>PRIMARY MENU OPTION:</p>
-</blockquote>
-</blockquote>
-<blockquote>
-<p>Select SECONDARY MENU OPTIONS: &lt;---</p>
-</blockquote>
-<p>Want to edit ACCESS CODE (Y/N): &lt;--- FILE MANAGER ACCESS CODE: Want to edit VERIFY CODE (Y/N): &lt;---</p>
-<blockquote>
-<p>Select DIVISION:</p>
-</blockquote>
-<blockquote>
-<p>---&gt; SERVICE/SECTION:</p>
-</blockquote>
-<dl>
-<dt>_______________________________________________________________________________</dt>
-<dd><p>Exit Save Next Page Refresh</p>
-</dd>
-</dl>
-<p>Enter a command or '^' followed by a caption to jump to a specific field.</p>
-<p>COMMAND: Press &lt;PF1&gt;H for help Insert</p>
-</blockquote>
+<code>                            Edit an Existing User
+NAME: CPRS,USER                                                     Page 1 of 5
+_______________________________________________________________________________
+   NAME... CPRS,USER                                   INITIAL: UC
+    TITLE:                                           NICK NAME:
+      SSN: 000000002                                       DOB:
+   DEGREE:                                           MAIL CODE:
+  DISUSER:                                     TERMINATION DATE:
+  Termination Reason:
+
+           PRIMARY MENU OPTION:
+ Select SECONDARY MENU OPTIONS:   <---
+Want to edit ACCESS CODE (Y/N):   <---  FILE MANAGER ACCESS CODE:
+Want to edit VERIFY CODE (Y/N):   <---
+
+              Select DIVISION:
+         ---> SERVICE/SECTION:
+_______________________________________________________________________________
+ Exit     Save     Next Page     Refresh
+
+Enter a command or '^' followed by a caption to jump to a specific field.
+
+
+COMMAND:                                     Press <PF1>H for help    Insert</code>
 <p>To change to other pages, press the down arrow key or &lt;TAB&gt; until the cursor reaches the COMMAND box. Then type <code>N</code> or <code>Next Page</code> and press &amp;lt;enter&amp;gt; to display the next page.</p>
 <p>There is nothing that needs to be set on the second or third pages, but the CPRS Tab Access is set on the fourth page. Navigate the cursor to the location under the <code>Name</code> header and enter <code>COR</code>, which stands <code>for Core Tab Access</code>, and enter an effective date of yesterday, <code>T-1</code> is the notation to use.</p>
-<blockquote>
-<h4 id="name-cprsuser-page-4-of-5">NAME: CPRS,USER Page 4 of 5</h4>
-<p>RESTRICT PATIENT SELECTION: OE/RR LIST:</p>
-<dl>
-<dt>CPRS TAB ACCESS:</dt>
-<dd><p>Name Description Effective Date Expiration Date</p>
-</dd>
-</dl>
-<p>-&gt;</p>
-<hr />
-<p>COMMAND: Press &lt;PF1&gt;H for help</p>
-</blockquote>
+<code>                            Edit an Existing User
+NAME: CPRS,USER                                                     Page 4 of 5
+_______________________________________________________________________________
+RESTRICT PATIENT SELECTION:        OE/RR LIST:
+
+CPRS TAB ACCESS:
+  Name  Description                          Effective Date  Expiration Date
+->
+
+
+
+
+
+
+
+
+_______________________________________________________________________________
+
+
+
+
+
+COMMAND:                                       Press <PF1>H for help</code>
 <p>Once that is done, save and exit the ScreenMan form via the COMMAND box and then answer the final questions regarding access letters, security keys and mail groups:</p>
-<blockquote>
-<p>Exit Save Next Page Refresh</p>
-<p>Enter a command or '^' followed by a caption to jump to a specific field.</p>
-<p>COMMAND: E Press &lt;PF1&gt;H for help Insert</p>
-<p>Print User Account Access Letter? NO Do you wish to allocate security keys? NO// NO Do you wish to add this user to mail groups? NO// NO</p>
-<p><em>&lt;snip&gt;</em> Select User Management &lt;TEST ACCOUNT&gt; Option: ^&amp;lt;enter&amp;gt; VISTA&gt;</p>
-</blockquote>
-<p>At this point, CPRS can successfully connect to the local VistA instance and the <code>CPRS,USER</code> will be able to sign on and interact with the GUI. For instructions on how to set up the CPRS connection command or to download the executable, see <a href="http://www.osehra.org/document/guis-used-automatic-functional-testing">GUI page</a>.</p>
+<code>Exit     Save     Next Page     Refresh
+
+Enter a command or '^' followed by a caption to jump to a specific field.
+
+
+COMMAND: <strong>E</strong>                                     Press <PF1>H for help    Insert
+
+Print User Account Access Letter? <strong>NO</strong>
+Do you wish to allocate security keys? NO// <strong>NO</strong>
+Do you wish to add this user to mail groups? NO// <strong>NO</strong>
+
+...
+
+Select User Management <TEST ACCOUNT> Option: <strong>^&lt;enter&gt;</strong>
+VISTA></code>
+<p>At this point, CPRS can successfully connect to the local VistA instance and the <code>CPRS,USER</code> will be able to sign on and interact with the GUI.</p>
 </body>
 </html>
