Finish very rough drafts.

--- a/New/InstallCache.html
+++ b/New/InstallCache.html
@@ -12,13 +12,28 @@
 <header>
 <h1 class="title">Installing Caché</h1>
 </header>
-
 <p>The following instructions were adapted from Nancy Anthracite's document entitled <a href="http://opensourcevista.net:8888/NancysVistAServer/InstallingVistAWithSingleUserVersionCache5.2.doc">InstallingVistAWithSingleUserVersionCache5.2</a>, which was created to guide a user through installing InterSystems Caché onto a Windows operating system. The instructions were using an older version of Caché; this uses the Caché 2011 trial version and shows the updated Management Portal interface.</p>
 <p>Trial versions of the Caché installer can be downloaded from</p>
 <blockquote>
 <p><a href="http://download.intersystems.com/download/register.csp" class="uri">http://download.intersystems.com/download/register.csp</a>.</p>
 </blockquote>
 <p>This installation guide uses Caché 2011.1, it should also apply for Cache 2013. If you already have a Caché installation and are looking to install VistA as an additional database, you do not have to re-install Caché. Please use your existing installation and pick up the instructions at the point where the folder is created within the mgr folder.</p>
+<h1 id="these-images-are-out-of-order">These Images Are Out Of Order</h1>
+<figure>
+<img src="images/InstallCache/InstanceName.png" />
+</figure>
+<figure>
+<img src="images/InstallCache/SetupType.png" />
+</figure>
+<figure>
+<img src="images/InstallCache/UnicodeSupport.png" />
+</figure>
+<figure>
+<img src="images/InstallCache/InitialSecuritySettings.png" />
+</figure>
+<figure>
+<img src="images/InstallCache/ReadyToInstall.png" />
+</figure>
 <h1 id="download-and-install-caché">Download and Install Caché</h1>
 <p>Download the Caché installer from the above link and double click on the downloaded .exe file. The first window that requires interaction is the Licensing Agreement shown in the figure below. Agree to the license in order to continue in the installation process.</p>
 <figure>
